# dmml-contest-server

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: app.py  models.py
static/: leaderboard.html
